[vguerand] add material.io / fix listenner in server / add invisibility mode and spectrum mode

--- a/src/client/index.scss
+++ b/src/client/index.scss
@@ -12,7 +12,7 @@ body,
 #root {
   height: 100%;
   padding: 0;
-  background-color: #000000;
+  background-color: rgb(120, 31, 143);
   /* background-image: url("./assets/redtetris-background.png"); */
   /* background: linear-gradient(to right bottom, #405de6, #fcaf45); */
 }
@@ -67,12 +67,12 @@ body,
   margin-top: 20px;
 }
 
-.spectrum > .game-grid {
+.spectrum>.game-grid {
   box-shadow: none;
   padding: 20px;
 }
 
-.spectrum > .game-grid > .line > .box {
+.spectrum>.game-grid>.line>.box {
   width: 20px;
   height: 20px;
   /* background-color: rgb(255, 255, 255); */
@@ -101,7 +101,7 @@ body,
   flex-direction: column;
 }
 
-.game-pieces > * {
+.game-pieces>* {
   margin-bottom: 10px;
 }
 
@@ -284,15 +284,18 @@ $boxes: 100;
   @keyframes anim-#{$i} {
     $a: random(300) + px;
     $b: random(400) + px;
+
     //
     0% {
       top: -50%;
       left: 50%;
     }
+
     50% {
       top: $a;
       left: $b;
     }
+
     100% {
       top: $a;
       left: $b;
@@ -301,6 +304,7 @@ $boxes: 100;
   }
 
   .broken-line-box {
+
     /*     width: 5px;
     height: 5px;
     border-radius: 50%;
@@ -349,10 +353,12 @@ $boxes: 100;
 } */
 
 @keyframes shadow {
+
   0%,
   100% {
     transform: scale(0.5);
   }
+
   50% {
     transform: scale(1);
   }
@@ -375,6 +381,7 @@ $boxes: 100;
   0% {
     transform: rotateY(90deg);
   }
+
   10%,
   100% {
     transform: rotateY(-90deg);
@@ -392,12 +399,15 @@ $boxes: 100;
 .countdown .number:nth-child(1) {
   animation-delay: 0s;
 }
+
 .countdown .number:nth-child(2) {
   animation-delay: 1s;
 }
+
 .countdown .number:nth-child(3) {
   animation-delay: 2s;
 }
+
 .countdown .number:nth-child(4) {
   animation-delay: 3s;
 }
